--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
+    "@tiptap/extension-placeholder": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.27",
+    "gsap": "^3.13.0",
     "next": "^14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sweetalert2": "^11.26.3",
+    "three": "^0.181.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "24.10.1",
     "@types/react": "19.2.4",
     "@typescript-eslint/eslint-plugin": "7.18.0",
