--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.5",
     "sweetalert2": "^11.26.3",
     "three": "^0.181.2",
     "zod": "^3.23.8"
