--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@prisma/client": "^5.18.0",
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
+    "@tiptap/extension-color": "^3.11.0",
     "@tiptap/extension-placeholder": "^3.11.0",
+    "@tiptap/extension-text-style": "^3.11.0",
     "@tiptap/react": "^3.11.0",
     "@tiptap/starter-kit": "^3.11.0",
     "bcryptjs": "^2.4.3",
